--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ fuse-sys = { path = "./fuse-sys", version = "=0.4.0-dev" }
 libc = "0.2.51"
 log = "0.4.6"
 thread-scoped = "1.0.2"
+serde = { version = "1.0.149",  features = ["derive"] }
 
 [dev-dependencies]
 env_logger = "0.6.0"
